--- a/admin_ui/global_risk_controller/prometheus.yml
+++ b/admin_ui/global_risk_controller/prometheus.yml
@@ -6,3 +6,14 @@ scrape_configs:
       - targets: ["global-risk-controller:9100"]
     metrics_path: /metrics
     scheme: http
+
+scrape_configs:
+  # existing jobs …
+
+  - job_name: "global_risk_controller"
+    static_configs:
+      - targets: ["global-risk-controller:9100"]
+
+  - job_name: "edge_decay_detector"
+    static_configs:
+      - targets: ["edge-decay-detector:9100"]
