--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -429,4 +429,8 @@ jobs:
           name: lightgbm-model
           path: models/lightgbm_model.txt
 
+- name: Run guard‑helper unit tests
+  run: |
+    pip install -r requirements.txt
+    pytest tests/unit/guard_helpers_test.py -q
 
