--- a/src/config.yaml
+++ b/src/config.yaml
@@ -360,3 +360,13 @@ git add config.yaml
 git commit -m "Tune LIR: weight=0.18, min_abs=0.35, depth_min_units=18000"
 git push origin main
 
+# config.yaml (add a new section)
+event_window:
+  pre_minutes: 5      # minutes BEFORE the event timestamp
+  post_minutes: 15    # minutes AFTER the event timestamp
+  impact_bias:
+    high:   0.07
+    medium: 0.04
+    low:    0.02
+
+
